--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20231218.0",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.5",
     "@types/service-worker-mock": "^2.0.4",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^6.4.1",
+    "class-validator": "^0.14.0",
+    "cloudflare-dtty": "^0.3.5",
     "dotenv": "^16.3.1",
-    "cloudflare-dtty": "^0.3.2",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "lodash": "^4.17.21",
     "prettier": "^2.8.8",
     "prettier-plugin-organize-imports": "^3.2.2",
     "typescript": "5.3.3",
