--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
   "name": "cloudflare-dtty",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "wrangler build",
-    "deploy": "wrangler deploy",
+    "deploy": "wrangler deploy --minify",
     "dev": "wrangler dev",
-    "lint:fix": "eslint --fix \"src/**/*.ts\""
+    "lint:fix": "eslint --fix src/**/*.ts",
+    "wrangler": "wrangler"
   },
   "devDependencies": {
+    "@cloudflare/kv-asset-handler": "^0.3.0",
     "@cloudflare/workers-types": "^4.20231218.0",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.5",
-    "@types/service-worker-mock": "^2.0.4",
+    "@types/papaparse": "^5.3.14",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^6.4.1",
     "class-validator": "^0.14.0",
-    "cloudflare-dtty": "^0.3.5",
-    "dotenv": "^16.3.1",
+    "cloudflare-dtty": "^0.5.0",
+    "discord-interactions": "^3.4.0",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^4.2.1",
     "lodash": "^4.17.21",
+    "papaparse": "^5.4.1",
     "prettier": "^2.8.8",
     "prettier-plugin-organize-imports": "^3.2.2",
     "typescript": "5.3.3",
