--- a/.eslintrc
+++ b/.eslintrc
@@ -4,20 +4,20 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint/eslint-plugin"],
+  "plugins": ["@typescript-eslint/eslint-plugin", "import"],
   "extends": [
     "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "plugin:import/typescript"
   ],
   "root": true,
   "env": {
     "node": true
   },
-  "ignorePatterns": [".eslintrc", "*/**/*.json"],
+  "ignorePatterns": [".eslintrc", "*/**/*.json", "*.d.ts"],
   "rules": {
-    "@typescript-eslint/interface-name-prefix": "off",
-    "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/no-explicit-any": "error"
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/consistent-type-imports": "error",
+    "import/no-duplicates": ["error", { "prefer-inline": true }]
   }
 }
