--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^6.4.1",
     "class-validator": "^0.14.0",
-    "cloudflare-dtty": "^0.5.1",
     "discord-interactions": "^3.4.0",
+    "dtty-extra": "0.0.1",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.29.1",
@@ -28,6 +28,6 @@
     "prettier": "^2.8.8",
     "prettier-plugin-organize-imports": "^3.2.2",
     "typescript": "5.3.3",
-    "wrangler": "^3.22.3"
+    "wrangler": "^3.22.4"
   }
 }
